pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
spec:   
  containers:
  - name: my-container
    image: nginx:latest
    ports:
    - containerPort: 80
