Service-backend.yml
apiVersion: v1
kind: Service

metadata:
  name: backend-service

spec:
  selector:
    app: backend

  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
  type: NodePort
