Service-frontend.yml
apiVersion: v1
kind: Service

metadata:
  name: frontend-service

spec:
  selector:
    app: frontend

  ports:
  - port: 80
    protocol: TCP
    targetPort: 80  

  type: ClusterIP
