Service-sql.yml
# this is the Service manifest for MySQL deployment
apiVersion: v1
kind: Service

metadata:
  name: mysql-service

spec:
  ports:
  - port: 3306
    protocol: TCP
    targetPort: 3306
  type: NodePort

  selector:
    app: mysql
