ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: three-tier-ingress

spec:
  ingressClassName: nginx

  rules:
  - http:

      paths:
      - path: /

        pathType: Prefix

        backend:
          service:
            name: frontend-service

            port:
              number: 80
